--- a/css/banner.css
+++ b/css/banner.css
@@ -1,1 +1,167 @@
-.item-img,.m-banner{height:500px;line-height:1.14;font-size:12px;position:relative;left:0;top:0;width:100%}.item-img li,.m-banner li{height:500px;width:100%;left:0;top:0;position:absolute;overflow:hidden;opacity:0}.item-img li .i-wrap,.m-banner li .i-wrap{width:990px;height:100%;margin:0 auto}.item-img li .i-inner,.m-banner li .i-inner{position:relative;height:100%;margin-left:-460px;width:1920px}.item-img li .i-inner .i-link,.m-banner li .i-inner .i-link{position:absolute;z-index:2;display:block;top:0;left:0;width:100%;height:100%;overflow:hidden}.m-banner{z-index:1}.m-banner .slider-wrap .item.selected{z-index:1;opacity:1}.m-banner .slider-trigger{position:absolute;left:0;right:0;bottom:20px;text-align:center;font-size:0;z-index:100}.m-banner .slider-trigger a{padding:10px 0;display:inline-block}.m-banner .slider-trigger a i{position:relative;display:inline-block;width:24px;height:4px;overflow:hidden;margin:0 5px;background:#fff;opacity:.2;filter:alpha(opacity=20);cursor:pointer;-webkit-transition:all .25s ease;-moz-transition:all .25s ease;transition:all .25s ease}.m-banner .slider-trigger a.curr i{opacity:1;filter:alpha(opacity=100)}.item-img li{z-index:0}.item-img li.hover{z-index:1}.root61 .m-banner .slider-wrap .item .i-wrap{width:1200px;position:relative}.root61 .m-banner .slider-wrap .item .i-inner{position:relative;margin-left:-360px;width:1920px}.left-area{position:absolute;z-index:10;line-height:50px;top:170px;left:0;text-align:left}.left-area h1{font-size:44px;color:#fff}.left-area p{font-size:20px;color:#fefefe}.left-area span{display:inline-block;text-align:center;width:118px;height:34px;line-height:34px;font-size:16px;color:#fff;border:1px solid #fff;transition:color .4s ease-in 0s,background .4s ease-in 0s}.left-area span:hover{background:#fefefe;color:#222a3c}.right-area{position:absolute;width:100%;height:100%;z-index:1;top:0;left:0;right:0;bottom:0;transform-style:preserve-3d;transform:rotateX(0deg) rotateY(0deg);transition:all .6s ease-out}.right-area .img-box,.right-area .special-box{position:absolute;top:0;right:-360px;transition:all .9s ease-in-out}.right-area .center-box{position:absolute;top:0;right:0;transition:all .9s ease-in-out}@-webkit-keyframes bounce{20%,53%,80%{-webkit-transform:translateZ(0);transform:translateZ(0)}40%,43%{-webkit-transform:translate3d(0,-30px,0);transform:translate3d(0,-30px,0)}70%{-webkit-transform:translate3d(0,-15px,0);transform:translate3d(0,-15px,0)}90%{-webkit-transform:translate3d(0,-4px,0);transform:translate3d(0,-4px,0)}}@keyframes bounce{20%,53%,80%{-webkit-transform:translateZ(0);transform:translateZ(0)}40%,43%{-webkit-transform:translate3d(0,-30px,0);transform:translate3d(0,-30px,0)}70%{-webkit-transform:translate3d(0,-15px,0);transform:translate3d(0,-15px,0)}90%{-webkit-transform:translate3d(0,-4px,0);transform:translate3d(0,-4px,0)}}@-webkit-keyframes pulse{0%{-webkit-transform:scale3d(.3,.3,.3);transform:scale3d(.3,.3,.3)}to{-webkit-transform:scaleX(1);transform:scaleX(1)}}@keyframes pulse{0%{-webkit-transform:scale3d(.3,.3,.3);transform:scale3d(.3,.3,.3)}to{-webkit-transform:scaleX(1);transform:scaleX(1)}}@-webkit-keyframes fadeInDown-s{0%{opacity:0;-webkit-transform:translate3d(0,-60px,0);transform:translate3d(0,-60px,0)}to{opacity:1;-webkit-transform:none;transform:none}}@keyframes fadeInDown-s{0%{opacity:0;-webkit-transform:translate3d(0,-60px,0);transform:translate3d(0,-60px,0)}to{opacity:1;-webkit-transform:none;transform:none}}@-webkit-keyframes fadeInDown-m{0%{opacity:0;-webkit-transform:translate3d(0,-80px,0);transform:translate3d(0,-80px,0)}to{opacity:1;-webkit-transform:none;transform:none}}@keyframes fadeInDown-m{0%{opacity:0;-webkit-transform:translate3d(0,-80px,0);transform:translate3d(0,-80px,0)}to{opacity:1;-webkit-transform:none;transform:none}}@-webkit-keyframes fadeInUp-m{0%{opacity:0;-webkit-transform:translate3d(0,80px,0);transform:translate3d(0,80px,0)}to{opacity:1;-webkit-transform:none;transform:none}}@keyframes fadeInUp-m{0%{opacity:0;-webkit-transform:translate3d(0,80px,0);transform:translate3d(0,80px,0)}to{opacity:1;-webkit-transform:none;transform:none}}@-webkit-keyframes fadeInUp-s{0%{opacity:0;-webkit-transform:translate3d(0,60px,0);transform:translate3d(0,60px,0)}to{opacity:1;-webkit-transform:none;transform:none}}@keyframes fadeInUp-s{0%{opacity:0;-webkit-transform:translate3d(0,60px,0);transform:translate3d(0,60px,0)}to{opacity:1;-webkit-transform:none;transform:none}}@-webkit-keyframes right-to-left{0%{opacity:0;-webkit-transform:translate3d(-120px,0,0);transform:translate3d(-120px,0,0)}to{opacity:1;-webkit-transform:none;transform:none}}@keyframes right-to-left{0%{opacity:0;-webkit-transform:translate3d(120px,0,0);transform:translate3d(120px,0,0)}to{opacity:1;-webkit-transform:none;transform:none}}@-webkit-keyframes left-to-right{0%{opacity:0;-webkit-transform:translate3d(120px,0,0);transform:translate3d(120px,0,0)}to{opacity:1;-webkit-transform:none;transform:none}}@keyframes left-to-right{0%{opacity:0;-webkit-transform:translate3d(-120px,0,0);transform:translate3d(-120px,0,0)}to{opacity:1;-webkit-transform:none;transform:none}}.m-banner .slider-wrap .item.selected .left-area{animation:right-to-left .6s ease-in-out 0s normal running 1}.m-banner .slider-wrap .item.selected .right-area .img-box:first-child{transform:translateZ(50px);animation:fadeInUp-m .9s cubic-bezier(.4,0,.3,1) 0s normal none 1 running}.m-banner .slider-wrap .item.selected .right-area .img-box:nth-child(2){transform:translateZ(500px);animation:fadeInUp-s .6s cubic-bezier(.4,0,.3,1) 0s normal none 1 running}.m-banner .slider-wrap .item.selected .right-area .special-box{transform:translateZ(50px);animation:pulse .9s cubic-bezier(.4,0,.3,1) 0s normal none 1 running}.m-banner .slider-wrap .item.selected .right-area .center-box{animation:fadeInUp-m .9s cubic-bezier(.4,0,.3,1) 0s normal none 1 running}.notice-wrap{width:100%;height:30px;line-height:1.14;font-size:12px;margin-top:-30px;background:rgba(34,34,34,.5);filter:progid:DXImageTransform.Microsoft.gradient(startcolorstr=#5F222222,endcolorstr=#5F222222);color:#fff;position:relative;z-index:200}.notice-wrap .notice-inner{width:1200px;margin:0 auto;height:100%;line-height:30px}.notice-wrap a{color:#fff}.notice-wrap a:hover{color:#fff;text-decoration:underline}.notice-wrap a i{font-size:14px}.notice-wrap .notice-list li{float:left;margin-right:1%;width:30%;text-align:left;white-space:nowrap;-ms-text-overflow:ellipsis;text-overflow:ellipsis;overflow:hidden}.notice-wrap .notice-list li .newfont{font-size:12px}.notice-wrap .notice-more{float:right}
+@-webkit-keyframes fadeInDown {
+            0% {
+                opacity: 0;
+                -webkit-transform: translate3d(0,-100%,0);
+                transform: translate3d(0,-100%,0)
+            }
+
+            100% {
+                opacity: 1;
+                -webkit-transform: none;
+                transform: none
+            }
+        }
+
+@keyframes fadeInDown {
+            0% {
+                opacity: 0;
+                -webkit-transform: translate3d(0,-100%,0);
+                -ms-transform: translate3d(0,-100%,0);
+                transform: translate3d(0,-100%,0)
+            }
+
+            100% {
+                opacity: 1;
+                -webkit-transform: none;
+                -ms-transform: none;
+                transform: none
+            }
+        }
+@-webkit-keyframes fadeInUp {
+            0% {
+                opacity: 0;
+                -webkit-transform: translate3d(0, 100%, 0);
+                transform: translate3d(0, 100%, 0)
+            }
+            100% {
+                opacity: 1;
+                -webkit-transform: none;
+                transform: none
+            }
+        }
+@keyframes fadeInUp {
+            0% {
+                opacity: 0;
+                -webkit-transform: translate3d(0, 100%, 0);
+                -ms-transform: translate3d(0, 100%, 0);
+                transform: translate3d(0, 100%, 0)
+            }
+            100% {
+                opacity: 1;
+                -webkit-transform: none;
+                -ms-transform: none;
+                transform: none
+            }
+        }
+
+*{
+	padding:0;
+	margin:0;
+}
+html,body,.swiper-container,.swiper-wrapper,.swiper-slide{
+	width:100%;
+	height:100%;
+}
+html{
+	font: 12px/1.5 "Microsoft YaHei","PingFang SC","Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+img{
+	vertical-align: middle; 
+}
+a{
+	text-decoration:none;
+}
+.swiper-slide{background-position:50% 50%; position:relative;}
+.slide1{background-image:url(../img/1.jpg);}
+.slide2{background-image:url(../img/2.jpg);}
+.slide3{background-image:url(../img/3.jpg);}
+.slide4{background-image:url(../img/4.jpg);}
+.slide5{background-image:url(../img/5.jpg);}
+.slide6{background-image:url(../img/6.jpg);}
+.logo{
+	position: absolute;
+    left: 60px;
+    top: 60px;
+}
+.fs16{font-size:16px;}
+.fs24{font-size:24px;}
+.pt5{padding-top:5px;}
+.pt10{padding-top:10px;}
+.mt30{margin-top:30px;}
+.mb20 {margin-bottom: 20px;}
+.mt20 {margin-top: 20px;}
+.mt15{margin-top:15px;}
+.mt40{margin-top:40px;}
+.mr35{margin-right:35px;}
+.ml10 {margin-left: 10px;}
+.line {width: 40px;height: 1px;background: #fff;}
+.dividing-line {display: inline-block;vertical-align: middle;border-left: 1px solid #fff;height: 15px;margin: 0 8px;}
+.white{color:#fff;}
+.btn{
+	display: inline-block;
+    vertical-align: middle;
+    width: 240px;
+    height: 60px;
+    line-height: 60px;
+    background: #f8ac00;
+    border-radius: 2px;
+    text-align: center;
+    color: #fff;
+    font-size: 18px;
+	transition: all 1s;   
+    -webkit-transition: all 1s;  
+}
+.btn:hover{
+	 background: #ffc555;
+}
+.slide1 p{
+	color: #666;
+}
+.ani{
+	opacity:0;
+}
+.ani-slide .ani1-1{
+	opacity:1;
+	-webkit-animation: fadeInDown 0.5s both;
+    animation: fadeInDown 0.5s both;
+}
+.ani-slide .ani1-2{
+	opacity:1;
+    -webkit-animation: fadeInDown 1s 0.5s both;
+    animation: fadeInDown 1s 0.5s both;
+}
+.ani-slide .ani1-3{
+	opacity:1;
+    -webkit-animation: fadeInDown 1s 1s both;
+    animation: fadeInDown 1s 1s both;
+}
+.ani-slide .ani2-1,.ani-slide .ani3-1,.ani-slide .ani4-1,.ani-slide .ani5-1{
+    opacity: 1;
+    -webkit-animation: fadeInUp 1s both;
+    animation: fadeInUp 1s both;
+}
+.ani-slide .ani2-2,.ani-slide .ani3-2,.ani-slide .ani4-2,.ani-slide .ani5-2{
+    opacity: 1;
+    -webkit-animation: fadeInUp 1s 0.5s both;
+    animation: fadeInUp 1s 0.5s both;
+}
+.ani-slide .ani5-1-2{
+	opacity: 1;
+	-webkit-animation: fadeInUp 1s 0.3s both;
+    animation: fadeInUp 1s 0.3s both;
+}
+.ani-slide .ani6-1 {
+    opacity: 1;
+    -webkit-animation: fadeInDown 0.5s both;
+    animation: fadeInDown 0.5s both;
+}
+.ani-slide .ani6-2 {
+    opacity: 1;
+    -webkit-animation: fadeInDown 1s 0.5s both;
+    animation: fadeInDown 1s 0.5s both;
+}
+.ani-slide .ani6-3 {
+    opacity: 1;
+    -webkit-animation: fadeInDown 1s 1s both;
+    animation: fadeInDown 1s 1s both;
+}
